--- a/package.json
+++ b/package.json
@@ -6,12 +6,17 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "async": "^2.1.5",
     "body-parser": "~1.15.1",
+    "cheerio": "^0.22.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
     "express": "~4.13.4",
     "jade": "~1.11.0",
+    "kloudless": "git://github.com/Kloudless/kloudless-node.git",
     "morgan": "~1.7.0",
+    "querystring": "^0.2.0",
+    "request": "^2.81.0",
     "serve-favicon": "~2.3.0"
   }
 }
